--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
-# Virtual environment
-venv/
-
 # Python cache
 __pycache__/
-*.pyc
+*.py[cod]
 
-# Environment variables
+# Virtual environments
+venv/
 .env
+*.env
+
+# VSCode stuff
+.vscode/
+
+# Pytest cache
+.pytest_cache/
+
+# MyPy cache
+.mypy_cache/
+
+# Mac users
+.DS_Store
